fix: org-chart >> gap between toolbar and chart nodes and nodes over flow bugs

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -11,11 +11,13 @@
 }
 
 #tree>svg {
+    height: 700px;
     background-color: #F3F5F8;
     font-family: var(--bs-body-font-family);
 }
-.pt-8{
-    padding-top: 8rem;
+.pt-10{
+    padding-top: 10rem;
+    height: 100% !important;
 }
 [data-n-id] rect {
     filter: drop-shadow(0px 0.4375rem 0.75rem rgba(0, 0, 0, .1));
@@ -55,13 +57,11 @@
     --bs-bg-opacity: 0 !important;
     .boc-filter{
         display: none;
-        @extend .w-100,.px-3;
+        @extend .w-100,.px-3,.bg-transparent;
         top: -2px !important;
-        left: 0px !important;
+        left: 15px !important;
         @media (max-width:1280px) {
             top: -2px !important;
-        
-
         }
         div[data-filter-menu="DBA"]{
             left: 1.25%;
